# GpuCracker-v32.0-FINAL-

./: .gitignore  CMakeLists.txt  GPUEngine.h  GpuCore.cu  GpuCracker - all video card cuda 12.4.vcxproj  GpuCracker - toate placile cu cuda 12.4.vcxproj  GpuCracker.sln  GpuCracker.vcxproj  Makefile  README.md  SeedRecover.vcxproj  akm.h  akm_extra.h  akm_kernel.glsl  akm_seed2priv.vcxproj  akm_vulkan.spv  args.h  bloom.h  build_bloom.cpp  build_bloom.sln  build_bloom.vcxproj  check.h  clever.h  cuda_provider.cu  cuda_provider.h  gpu_interface.h  kernel_ops.cu  kernel_ops.cuh  main.cpp  main.cu  mnemonic.h  mnemonic_gpu.cu  mode_akm.h  multicoin.h  opencl_provider.h  opencl_wrapper.h  recover.cpp  runner.h  scan.h  schematic_output.txt  (+6 more)
.github/: FUNDING.yml
AcasaKey/: New Text Document.txt  akm_demo_gen.py  akm_examples.py  akm_genaddr.py  akm_seed2priv.py  akm_spec.json  akm_stream.py  akm_words_512.py  akm_words_512_extra.py  build_bloom.py  readme.md
akm/: wordlist_512_ascii.txt
readme/: 71 Solver.md  Antivirus Flagging & False Positives.md  README_AKM Mode.md  README_AKM_PROFILES.md  README_Mnemonic.md  README_buildBLOOM.md  README_eng.md  README_ro.md  analiza_ro.md  logica_akm.md  readme.md
